--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sekterra/t-components",
-  "version": "0.8.40",
+  "version": "0.8.42",
   "description": "element-ui 2.15.7 기반 다양한 component 모음",
   "bugs": {
     "url": "https://github.com/owner/project/issues",
@@ -33,6 +33,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/scrollgrid": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
+    "@fullcalendar/vue": "^5.10.1",
     "element-ui": "^2.15.7",
     "element-ui-table-span-method": "^1.0.14",
     "file-saver": "2.0.1",
@@ -40,7 +47,6 @@
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "postcss-import": "^14.0.2",
-    "rollup-plugin-postcss": "^4.0.2",
     "sortablejs": "1.8.4",
     "truncate-utf8-bytes": "^1.0.2",
     "utf8-byte-length": "^1.0.4",
@@ -65,6 +71,7 @@
     "postcss-webfont": "^4.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.8",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
     "vue": "^2.6.14",
